# mlflow-drift-loop

./: .gitignore  HANDOFF.md  README.md  mlflow_scheduled.db  pyproject.toml  requirements.txt
.github/workflows/: drift-loop.yml  pages.yml
.streamlit/: config.toml
dashboard/: app.py  theme.py
data_cache/: openmeteo_50p0647_19p945_2024-08-11_2025-09-16.parquet  openmeteo_50p0647_19p945_2024-08-27_2025-10-02.parquet  openmeteo_50p0647_19p945_2024-09-10_2025-10-16.parquet  openmeteo_50p0647_19p945_2024-09-27_2025-11-02.parquet  openmeteo_50p0647_19p945_2024-10-11_2025-11-16.parquet  openmeteo_50p0647_19p945_2024-10-27_2025-12-02.parquet  openmeteo_50p0647_19p945_2025-05-01_2026-02-01.parquet
mlartifacts_scheduled/b3aec58bf2434821afc58537a4f8ce58/artifacts/monitoring/: feature_distributions.json  monitor_predictions.csv
mlartifacts_scheduled/models/m-8a43802b7f0c4e6695b372ac25bf531e/artifacts/: MLmodel  conda.yaml  model.skops  registered_model_meta  requirements.txt
outputs/: run_meta_scheduled.json
scripts/: build_site.py  run_openmeteo.py  run_scheduled.py  run_simulation.py  sweep_knobs.py
site/: app.js  index.html
src/driftloop/: __init__.py  config.py  drift.py  loop.py  model.py  tracking.py
src/driftloop/data/: __init__.py  base.py  openmeteo.py  synthetic.py
tests/: test_data.py  test_drift.py  test_loop.py  test_openmeteo.py
