[project]
name = "mlflow-drift-loop"
version = "0.1.0"
description = "Track -> detect drift -> retrain challenger -> promote. Phase 1: synthetic data."
requires-python = ">=3.11,<3.13"
dependencies = [
    "mlflow>=3.1,<4",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "streamlit>=1.38",
    "plotly>=5.24",
    "requests>=2.31",
    "truststore>=0.9",     # route TLS through the OS trust store (corporate proxy)
    "pyarrow>=15",         # parquet cache for the Open-Meteo timeline
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/driftloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]
